[package]
name = "jadepool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rustyline = "7.1.0"
rustyline-derive = "0.7.0"
thiserror = "1.0.24"
sqlparser = "0.23.0"
serde = { version = "1.0.123", features = ["derive", "rc"] }
structopt = "0.3.25"
prettytable-rs = "0.9.0"
log = "0.4.14"
env_logger = "0.9.0"

